ingress-cert-manager/k8s/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 8336-2a02-ff0-1003-8a39-214c-7894-43d4-34c.eu.ngrok.io
    secretName: 8336-2a02-ff0-1003-8a39-214c-7894-43d4-34c.eu.ngrok.io
  rules:
  - host: 8336-2a02-ff0-1003-8a39-214c-7894-43d4-34c.eu.ngrok.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-01
              port:
                number: 80
