ingress-cert-manager/k8s/ex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    meta.helm.sh/release-name: grafana
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 9.2.5
    helm.sh/chart: grafana-6.44.9
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana-eks.redacreltd.com
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana-eks.redacreltd.com
    secretName: grafana-eks-redacreltd-com
